Aprimorando a API e resolvendo alguns bugs

--- a/NewClick.UI/appsettings.json
+++ b/NewClick.UI/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ApiSettings": {
-   "BaseUrl": "http://localhost:5007",
+    "BaseUrl": "http://localhost:5007/api/",
     "TimeoutSeconds": 30
   }
 }
